--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "react": "18.3.1",
-    "react-native": "0.75.4",
+    "react-native": "^0.76.0",
     "react-native-windows": "^0.75.5"
   },
   "devDependencies": {
@@ -28,10 +28,10 @@
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
+    "metro-config": "^0.80.12",
     "prettier": "2.8.8",
     "react-test-renderer": "18.3.1",
-    "typescript": "5.0.4",
-    "metro-config": "^0.80.12"
+    "typescript": "5.0.4"
   },
   "engines": {
     "node": ">=18"
